--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "6.0.0",
+    "eslint-plugin-prettier": "3.1.0",
     "mocha": "^5.2.0",
+    "prettier": "1.18.2",
     "puppeteer": "^1.18.0",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.1",
