--- a/package.json
+++ b/package.json
@@ -4,32 +4,60 @@
   "description": "Full-stack / Front-end Web Engineering exercise",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --recursive --timeout 20000",
-    "build": "webpack",
-    "prestart": "npm run build",
-    "start": "webpack-dev-server --open"
+    "build:style": "tailwind build src/styles/index.css -o src/styles/tailwind.css",
+    "test": "mocha --recursive --timeout 40000",
+    "build": "node scripts/build.js",
+    "start": "npm run build:style && node scripts/start.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
+    "@babel/runtime-corejs2": "^7.5.5",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.5",
-    "babel-polyfill": "^6.26.0",
+    "case-sensitive-paths-webpack-plugin": "^2.2.0",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.3.0",
+    "eslint-loader": "^3.0.0",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
+    "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.8",
+    "mini-css-extract-plugin": "^0.8.0",
     "mocha": "^5.2.0",
+    "postcss-loader": "^3.0.0",
     "puppeteer": "^1.18.0",
+    "style-loader": "^1.0.0",
+    "tailwindcss": "^1.1.2",
+    "url-loader": "^2.1.0",
     "webpack": "^4.28.3",
     "webpack-cli": "^3.2.1",
-    "webpack-dev-server": "^3.1.11"
+    "webpack-dev-server": "^3.1.11",
+    "webpack-manifest-plugin": "^2.0.4"
   },
   "dependencies": {
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
-    "react-redux": "^5.1.1",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.1",
+    "@babel/runtime": "^7.5.5",
+    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "classnames": "^2.2.6",
+    "dotenv": "^8.1.0",
+    "dotenv-expand": "^5.1.0",
+    "focus-trap-react": "^6.0.0",
+    "postcss-cli": "^6.1.3",
+    "react": "^16.9.0",
+    "react-dev-utils": "^9.0.3",
+    "react-dom": "^16.9.0",
+    "react-helmet": "^5.2.1",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   }
 }
