--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "mocha --recursive --timeout 40000",
     "build": "node scripts/build.js",
     "start": "npm run build:style && node scripts/start.js",
-    "eslint:fix": "eslint --ignore-path .gitignore --fix"
+    "eslint:fix": "eslint --ignore-path .gitignore --fix src/**/*.js"
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
@@ -19,6 +19,11 @@
       "prettier --config .prettierrc --write",
       "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "author": "Vivek Nayyar",
   "license": "ISC",
@@ -42,6 +47,8 @@
     "eslint-plugin-react-hooks": "^2.0.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^4.0.0-beta.8",
+    "husky": "^3.0.5",
+    "lint-staged": "^9.2.5",
     "mini-css-extract-plugin": "^0.8.0",
     "mocha": "^5.2.0",
     "postcss-loader": "^3.0.0",
